add cursor magnetic effect

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,4 +124,8 @@
     cursor: none !important;
     @apply bg-background text-foreground;
   }
+  .magnetic {
+    will-change: transform;
+  }
+  
 }
